# cipher

./: .dockerignore  .env.example  .gitignore  .railwayignore  AGENT_FRAMEWORK.md  AGENT_FRAMEWORK_SUMMARY.txt  AGENT_INTEGRATION.md  AGENT_QUICK_REFERENCE.md  API_ARCHITECTURE_SUMMARY.txt  API_QUICK_START.md  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.txt  AUTO_ROUTER_IMPLEMENTATION.md  CIPHER_PROJECT_CHECKLIST.docx  CIPHER_SYSTEM_PROMPT.md  COMPLETE_API_REFERENCE.md  Cipher.rtf  DELIVERY_CHECKLIST.txt  DEPLOYMENT_GUIDE.md  Dockerfile  ELYSIAN_NEXT_SESSION_CHECKLIST.docx  ENDPOINT_REFERENCE.txt  FILE_MANIFEST.txt  FORGE_DECK_SUMMARY.txt  FORGE_PITCH_DECK.pptx  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_GUIDE.md  LICENSE  PERPLEXITY_PROMPT.md  QUICK_REFERENCE.md  QUICK_START_AUTO_ROUTING.md  README.md  README_VOICE_SYSTEM.md  SCANNER_IMPLEMENTATION.md  SCANNER_INDEX.md  SCANNER_QUICKSTART.md  SCANNER_README.md  SESSION_CONTEXT_SUMMARY.md  SYSTEM_PROMPT_INDEX.md  (+20 more)
.cipher/: PROJECT_BIBLE.md  TALLOWROOTS_BIBLE.md
CipherApp/: generate_xcode_project.sh  project.yml
CipherApp/CipherApp/: CipherApp.swift  Info.plist
CipherApp/CipherApp.xcodeproj/: project.pbxproj
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  executor.py  intent_classifier.py  models.py  registry.py
app/api/: agents.py  auth.py  billing.py  browser.py  chat.py  cron.py  evolution.py  media.py  memory.py  models.py  notifications.py  projects.py  recommendations.py  research.py  scanner.py  (+5 more)
dashboard/: index.html
tests/: conftest.py  test_api.py  test_upgrades.py
(+162 files in other folders)
